# is-photo

./: .gitignore  Cargo.toml  README.md
examples/: predict.rs  train.rs
src/: lib.rs  regression.rs
