[package]
name = "is-photo"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md"]
readme = "README.md"

[dependencies]
easyfft = "0.4.1"
image = { version = "0.25", default-features = false }

[dev-dependencies]
image = { version = "0.25", default-features = true }
rand = "0.8.5"
rayon = "1.10.0"
